--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/00_Levels/L_Main.L_Main
+GameInstanceClass=/Game/01_Scripts/BP_GameInstance.BP_GameInstance_C
+EditorStartupMap=/Game/00_Levels/L_Main.L_Main
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
