--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/00_Levels/L_Main.L_Main
+GameDefaultMap=/Game/00_Levels/L_Menu.L_Menu
 GameInstanceClass=/Game/01_Scripts/BP_GameInstance.BP_GameInstance_C
-EditorStartupMap=/Game/00_Levels/L_Main.L_Main
+EditorStartupMap=/Game/00_Levels/L_Menu.L_Menu
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
